--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,12 +1,14 @@
-name: Hello world
-  on:
-    push:
-      branches:
+name: Hello World!
+
+on:
+  push:
+    branches:
       - master
-  jobs:
-    hello_world_job:
-      runs-on: ubuntu-18.04
-      steps:
-        - name: Say hello
+
+jobs:
+  hello_world_job:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Say hello
         run: |
-        echo "Hello world"
+          echo "Hello World!"
