--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,4 +15,6 @@ jobs:
           node-version: '12.x'
       - name: npm install
         run: npm install
+      - name: lint
+        run: npm run eslint
 
