--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,4 +27,10 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
+      -  name: deploy
+         uses: akhileshns/heroku-deploy@v3
+         with:
+          heroku_api_key: ${{secrets.HEROKU_AUTH_TOKEN}}
+          heroku_app_name: "pokedex-zim"
+          heroku_email: "vadzimkk@gmail.com"
 
