--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,5 +35,5 @@ jobs:
           heroku_email: "vadzimkk@gmail.com"
           healthcheck: "pokedex-zim.herokuapp.com/health"
           checkstring: "ok"
-          rollbackoncheckfailed: true
+          rollbackonhealthcheckfailed: true
 
