--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,10 +40,11 @@ jobs:
           healthcheck: "https://pokedex-zim.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
+      - uses: actions/checkout@v2  # fix tag not created properly
       - name: bump version and push tag
         if: ${{ github.event_name == 'push'}}  # runs only on push to master or pull_request merge with master
         uses: anothrNick/github-tag-action@1.33.0
         env:
-          GIHUB_TOKEN: ${{secrets.HEROKU_AUTH_TOKEN }}  # https://docs.github.com/en/actions/reference/authentication-in-a-workflow
+          GIHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}  # https://docs.github.com/en/actions/reference/authentication-in-a-workflow
           DEFAULT_BUMP: patch  # for major.minor.patch version number
 
