--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: deploy
-        if: ${{ github.event_name == 'push' }}  # runs only on push to master or pull_request merge with master
+        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, " "), "#skip")}}  # runs only on push to master or pull_request merge with master, skips when message contains #skip
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_AUTH_TOKEN}}
@@ -40,9 +40,9 @@ jobs:
           healthcheck: "https://pokedex-zim.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
-#      - uses: actions/checkout@v2  # this is here to fix "tag not created properly"
+      - uses: actions/checkout@v2  # this is here to fix "tag not created properly"
       - name: bump version and push tag
-        if: ${{ github.event_name == 'push'}}  # runs only on push to master or pull_request merge with master
+        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, " "), "#skip")}}  # runs only on push to master or pull_request merge with master, skips when message contains #skip
         uses: anothrNick/github-tag-action@1.33.0
         env:
           GIHUB_TOKEN: ${{secrets.BUMP_VERSION}}  # https://docs.github.com/en/actions/reference/authentication-in-a-workflow
