--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,9 +3,9 @@ name: Deployment pipeline
 on:
   push:
     branches:
-      - master
+      - main # TODO change to master
   pull_request:
-    branches: [ master ]
+    branches: [ main ]  # TODO change to master
     types: [ opened, synchronize ] #    will run on pull request
 
 jobs:
@@ -41,10 +41,10 @@ jobs:
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
 #      - uses: actions/checkout@v2  # this is here to fix "tag not created properly"
-      - name: bump version and push tag
-        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip')}}  # runs only on push to master or pull_request merge with master, skips when message contains #skip
-        uses: anothrNick/github-tag-action@1.33.0
-        env:
-          GIHUB_TOKEN: ${{secrets.BUMP_VERSION}}  # https://docs.github.com/en/actions/reference/authentication-in-a-workflow
-          DEFAULT_BUMP: patch  # for major.minor.patch version number
+#      - name: bump version and push tag
+#        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip')}}  # runs only on push to master or pull_request merge with master, skips when message contains #skip
+#        uses: anothrNick/github-tag-action@1.33.0
+#        env:
+#          GIHUB_TOKEN: ${{secrets.BUMP_VERSION}}  # https://docs.github.com/en/actions/reference/authentication-in-a-workflow
+#          DEFAULT_BUMP: patch  # for major.minor.patch version number
 
