--- a/.github/workflows/test_job.yml
+++ b/.github/workflows/test_job.yml
@@ -22,26 +22,51 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
-      - name: notify onSuccess
-        uses: 8398a7/action-slack@v3  # slack notification
-        with:
-          status: custom  #------
-          fields: commit, author, took
-          custom_payload: |
-            {
+#      - name: notify onSuccess
+#        uses: 8398a7/action-slack@v3  # slack notification
+#        with:
+#          status: custom  #------
+#          fields: commit, author, took
+#          custom_payload: |
+#            {
+#            attachments: [{
+#            color: good,
+#            text: `a new version deployed to https://pokedex-zim.herokuapp.com/ (${process.env.AS_COMMIT})by ${process.env.AS_AUTHOR}\nbuild took ${process.env.AS_TOOK}`
+#            }]
+#            }
+#        env:
+#          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+#          if: ${{ github.event_name == 'push' && success() }} # Pick up events even if the job fails or is canceled.
+#      - name: notify onFailure
+#        uses: 8398a7/action-slack@v3  # slack notification
+#        with:
+#          status: ${{ job.status }}
+#          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
+#        env:
+#          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+#          if: ${{ github.event_name == 'push' && !success() }} # Pick up events even if the job fails or is canceled.
+  - name: notify on success
+      uses: 8398a7/action-slack@v3
+      with:
+        status: custom
+        fields: commit,author,took
+        custom_payload: |
+          {
+            username: 'action-slack',
+            icon_emoji: ':octocat:',
             attachments: [{
-            color: good,
-            text: `a new version deployed to https://pokedex-zim.herokuapp.com/ (${process.env.AS_COMMIT})by ${process.env.AS_AUTHOR}\nbuild took ${process.env.AS_TOOK}`
+              color: 'good',
+              text: `a new version deplyed to https://mycicdtestapp.herokuapp.com/  (${process.env.AS_COMMIT}) by ${process.env.AS_AUTHOR} build took ${process.env.AS_TOOK}`,
             }]
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-          if: ${{ success() }} # Pick up events even if the job fails or is canceled.
-      - name: notify onFailure
-        uses: 8398a7/action-slack@v3  # slack notification
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      if: ${{ github.event_name == 'push' && success() }}
+      - name: notify on failure
+        uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
-          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
+          fields: repo, message, commit,author,took
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-          if: ${{ !success() }} # Pick up events even if the job fails or is canceled.
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: ${{ failure() }}
