--- a/.github/workflows/test_job.yml
+++ b/.github/workflows/test_job.yml
@@ -31,7 +31,7 @@ jobs:
           custom_payload: |
             {
             attachments: [{
-            color: good,
+            color: 'good',
             text: `a new version deployed to https://pokedex-zim.herokuapp.com/ (${process.env.AS_COMMIT})by ${process.env.AS_AUTHOR}\nbuild took ${process.env.AS_TOOK}`
             }]
             }
