--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,4 +47,28 @@ jobs:
 #        env:
 #          GIHUB_TOKEN: ${{secrets.BUMP_VERSION}}  # https://docs.github.com/en/actions/reference/authentication-in-a-workflow
 #          DEFAULT_BUMP: patch  # for major.minor.patch version number
+  - name: notify onSuccess
+      if: ${{ github.event_name == 'push' && success() }} # Pick up events even if the job fails or is canceled.
+      uses: 8398a7/action-slack@v3  # slack notification
+      with:
+        status: custom  #------
+        fields: commit, author, took
+        custom_payload: |
+          {
+          attachments: [{
+          color: 'good',
+          text: `a new version deployed to https://pokedex-zim.herokuapp.com/ (${process.env.AS_COMMIT})by ${process.env.AS_AUTHOR}\nbuild took ${process.env.AS_TOOK}`
+          }]
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+      - name: notify onFailure
+        if: ${{ github.event_name == 'push' && !success() }} # Pick up events even if the job fails or is canceled.
+        uses: 8398a7/action-slack@v3  # slack notification
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+
 
