--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,7 +46,7 @@ jobs:
 #        uses: anothrNick/github-tag-action@1.33.0
 #        env:
 #          GIHUB_TOKEN: ${{secrets.BUMP_VERSION}}  # https://docs.github.com/en/actions/reference/authentication-in-a-workflow
-#          DEFAULT_BUMP: patch
+#          DEFAULT_BUMP: 'patch'  # for major.minor.patch version number
   - name: notify onSuccess
       if: ${{ github.event_name == 'push' && success() }} # Pick up events even if the job fails or is canceled.
       uses: 8398a7/action-slack@v3  # slack notification
